# bevy_pyxel_loader

./: Cargo.toml  README.md
assets/: borders.pyxel
examples/: minimal.rs
src/: lib.rs
