[package]
name = "bevy_pyxel_loader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev= "43d99bb583866c1adb4aa88f19b88637df0a7f33", default_features = false}
anyhow = "1.0"
serde = {version = "1", features = ["derive"]}
pyxel = {git="https://github.com/TheLeonsver1/pyxel"}

[dev-dependencies]
bevy = {git = "https://github.com/bevyengine/bevy", rev= "43d99bb583866c1adb4aa88f19b88637df0a7f33"}
